update index and about file and add contact and style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
   <h1>Abraham Kwak</h1>
   <img src="mac.jpg" alt="imac on a desk"/>
@@ -23,19 +24,6 @@
     </ul>
     <h3>A portfolio site that I admire...</h3>
     <p>Robby Leonard's interactive portfolio site is OUT OF THIS WORLD. The site was mostly built using Javascript. The site is fun and encourages you to go through the whole experience with it's 'video game' like setting. Explaining what makes the site and experience great doesn't do it justice. I HIGHLY recommend that you take a look. Find the link here: <a href="http://www.rleonardi.com/interactive-resume/" target="_blank">Robby Leonardi's portfolio</a></p>
-    <h3>Feel free to submit a comment about my progress!</h3>
-    <form name="comments" action="success.html" method="post">
-      <div>
-        <label>Your Name:</label>
-        <input type="text" name="username">
-      </div>
-      <br />
-      <div>
-        <label>Comments:</label>
-        <textarea name="comment">Enter your comment here...</textarea>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
   </section>
 </body>
 </html>
