--- a/about.html
+++ b/about.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <title>Abraham Kwak - about</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
   <h2>My biography:</h2>
   <p>Born and raised in NJ/NYC area, I began working in the digital media industry 6 years ago. I started as a junior web developer but my career path led me towards user experience design. Today I am working hard to become a software engineer and fulfill my goal to become a designer/engineer hybrid.</p>
