update HTML and CSS files

--- a/about.html
+++ b/about.html
@@ -6,12 +6,24 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <h2>My biography:</h2>
-  <p>Born and raised in NJ/NYC area, I began working in the digital media industry 6 years ago. I started as a junior web developer but my career path led me towards user experience design. Today I am working hard to become a software engineer and fulfill my goal to become a designer/engineer hybrid.</p>
+  <div class="head-section">
+    <h1><a href="index.html">Abraham Kwak</a></h1>
+    <h3>Product Designer and Software Engineer</h3>
+    <nav>
+      <ul id="nav">
+        <li><a class="link-color" href="index.html">Home</a></li>
+        <li><a class="link-color active" href="about.html">About</a></li>
+        <li><a class="link-color" href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="container">
+    <section class="about">
+      <div class="img-circular"></div>
+      <h3>My biography:</h3>
+      <p>Born and raised in NJ/NYC area, I began working in the digital media industry 6 years ago. I started as a junior web developer but my career path led me towards product design. Today I am working hard to become a software engineer and fulfill my goal to become a designer/engineer hybrid.</p>
+    </section>
+  </div>
+  <div class="footer">&copy KwakDesign 2017</div>
 </body>
 </html>
