--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <h1>Abraham Kwak</h1>
+  <div class="head-section">
+    <h1><a class="link-color" href="index.html">Abraham Kwak</a></h1>
+    <h3>Product Designer and Software Engineer</h3>
+    <nav>
+      <ul id="nav">
+        <li><a class="link-color active" href="index.html">Home</a></li>
+        <li><a class="link-color" href="about.html">About</a></li>
+        <li><a class="link-color" href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <img src="mac.jpg" alt="imac on a desk"/>
-  <h2>UX Designer and Software Engineer in training.</h2>
-  <p>This portfolio site will gradually be updated throughout my journey at DBC.</p>
-  <section>
-    <h3>List of goals for the site this week...</h3>
-    <ul>
-      <li>build simple HTML layout</li>
-      <li>use semantic block level elements</li>
-      <li>include a form</li>
-    </ul>
-    <h3>A portfolio site that I admire...</h3>
-    <p>Robby Leonard's interactive portfolio site is OUT OF THIS WORLD. The site was mostly built using Javascript. The site is fun and encourages you to go through the whole experience with it's 'video game' like setting. Explaining what makes the site and experience great doesn't do it justice. I HIGHLY recommend that you take a look. Find the link here: <a href="http://www.rleonardi.com/interactive-resume/" target="_blank">Robby Leonardi's portfolio</a></p>
-  </section>
+  <div class="container">
+    <section class="home">
+      <p>This portfolio site will gradually be updated throughout my journey at DBC.</p>
+      <h3>List of goals for the site this week...</h3>
+      <ul>
+        <li>apply CSS to style HTML pages</li>
+        <li>make the site responsive using CSS</li>
+      </ul>
+      <h3>A portfolio site that I admire...</h3>
+      <p>Robby Leonard's interactive portfolio site is OUT OF THIS WORLD. The site was mostly built using Javascript. The site is fun and encourages you to go through the whole experience with it's 'video game' like setting. Take a look here: <a href="http://www.rleonardi.com/interactive-resume/" target="_blank">Robby Leonardi's portfolio</a></p>
+    </section>
+  </div>
+  <div class="footer">&copy KwakDesign 2017</div>
 </body>
 </html>
