--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,19 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="head-section">
-    <h1><a href="index.html">Abraham Kwak</a></h1>
-    <h3>Product Designer and Software Engineer</h3>
-    <nav>
-      <ul id="nav">
-        <li><a class="link-color" href="index.html">Home</a></li>
-        <li><a class="link-color" href="about.html">About</a></li>
-        <li><a class="link-color active" href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div class="container">
-    <section class="contact">
+  <div class="main-container">
+    <div class="head-section">
+      <h1><a href="index.html">Abraham Kwak</a></h1>
+      <h3>Product Designer and Full Stack Developer</h3>
+      <nav>
+        <ul id="nav">
+          <li><a class="link-color" href="index.html">Home</a></li>
+          <li><a class="link-color" href="about.html">About</a></li>
+          <li><a class="link-color active" href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div><!--end of head section-->
+    <div class="container contact">
       <h3>Feel free to submit a comment about my progress!</h3>
       <form name="comments" action="success.html" method="post">
         <div class="input-section">
@@ -32,8 +32,8 @@
         </div>
         <button id="submit_button" type="submit">Submit</button>
       </form>
-    </section>
-  </div>
-  <div class="footer">&copy KwakDesign 2017</div>
+    </div><!--end of container-->
+    <div class="footer"><p>&copy KwakDesign 2017</p></div>
+  </div><!--end of main container-->
 </body>
 </html>
