--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <h3>My biography:</h3>
         <p>Born and raised in NJ/NYC area, I began working in the digital media industry 6 years ago. I started as a junior web developer but my career path led me towards product design. Today I am working hard to become a software engineer and fulfill my goal to become a designer/engineer hybrid.</p>
     </div><!--end of container-->
-    <div class="footer"><p>&copy KwakDesign 2017</p></div>
+    <div class="footer"><p>&copy; KwakDesign 2017</p></div>
   </div><!--end of main container-->
 </body>
 </html>
