--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <button id="submit_button" type="submit">Submit</button>
       </form>
     </div><!--end of container-->
-    <div class="footer"><p>&copy KwakDesign 2017</p></div>
+    <div class="footer"><p>&copy; KwakDesign 2017</p></div>
   </div><!--end of main container-->
 </body>
 </html>
