--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3>A portfolio site that I admire...</h3>
       <p>Robby Leonard's interactive portfolio site is OUT OF THIS WORLD. The site was mostly built using Javascript. The site is fun and encourages you to go through the whole experience with it's 'video game' like setting. Take a look   here: <a href="http://www.rleonardi.com/interactive-resume/" target="_blank">Robby Leonardi's portfolio</a></p>
     </div><!--end of container-->
-    <div class="footer"><p>&copy KwakDesign 2017</p></div>
+    <div class="footer"><p>&copy; KwakDesign 2017</p></div>
   </div><!--end of main container-->
 
 </body>
